attach outside doms

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div id="react-container"></div>
+        <!-- maybe some backbone code or view-->
+        <button id="address-submit">Submit</button>
         <script src="./dist/assets/bundle.js"></script>
     </body>
+
 </html>
