--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Pure React Samples</title>
+        <link rel="stylesheet" type="text/css" href="./dist/assets/public/example-address-widget.css" />
     </head>
     <body>
         <div id="react-container"></div>
